Chnaged template and added handlebars

--- a/home.hbs
+++ b/home.hbs
@@ -20,11 +20,17 @@
 			<!-- Main -->
 				<article id="main">
 
+					<header class="special container">
+						<h2>{{{@blog.description}}}</h2>
+						<p>{{ghost_head}}</p>
+					</header>
+
+
 					<!-- Three -->
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>My <strong>thoughts</strong> (some more)</h2>
+								<h2>My <strong>thoughts</strong> (most recent)</h2>
 							</header>
 
 							<div class="row">
@@ -47,6 +53,21 @@
 						</section>
 
 				</article>
+
+				<!-- CTA -->
+					<section id="cta">
+
+						<header>
+							<h2>Are you <strong>interested</strong>?</h2>
+							<p>Contact me if you have any questions or if you just feel like chatting.<br>Also feel free to hit me up on social media.</p>
+						</header>
+						<footer>
+							<ul class="buttons">
+								<li><a href="mailto:timo.jaerv@gmail.com" class="button special">Send me an email</a></li>
+							</ul>
+						</footer>
+
+					</section>
 
 			{{> footer}}
 
