--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,73 +1,37 @@
 /*
-	Phantom by HTML5 UP
+	Twenty by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Form */
+/* Section/Article */
 
-	form .field {
-		float: none !important;
-		width: 100% !important;
-		padding-left: 0 !important;
+	section > .last-child, section.last-child,
+	article > .last-child,
+	article.last-child {
+		margin-bottom: 0;
 	}
 
-/* Button */
+/* Banner */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		border: solid 2px #585858 !important;
+	#banner {
+		background-image: url("../../images/banner.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
 	}
 
-		input[type="submit"]:hover,
-		input[type="reset"]:hover,
-		input[type="button"]:hover,
-		button:hover,
-		.button:hover {
-			border-color: #f2849e !important;
+		#banner .inner {
+			background: #341b2b;
 		}
 
-		input[type="submit"].special,
-		input[type="reset"].special,
-		input[type="button"].special,
-		button.special,
-		.button.special {
-			border: none !important;
-		}
+/* CTA */
 
-/* Tiles */
-
-	.tiles article > .image:before, .tiles article > .image:after {
-		display: none;
+	#cta {
+		background-image: url("../../images/banner.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
 	}
-
-/* Header */
-
-	#header .logo .symbol {
-		display: none;
-	}
-
-	#header nav ul li a[href="#menu"] {
-		text-indent: 0;
-		width: auto;
-		font-size: 0.8em;
-	}
-
-		#header nav ul li a[href="#menu"]:before, #header nav ul li a[href="#menu"]:after {
-			display: none;
-		}
-
-/* Footer */
-
-	#footer > .inner section {
-		width: 50%;
-		margin-left: 3em;
-	}
-
-		#footer > .inner section:first-child {
-			margin-left: 0;
-			width: 40%;
-		}
