--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,89 +4,41 @@
 @import 'libs/skel';
 
 /*
-	Phantom by HTML5 UP
+	Twenty by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Form */
+/* Section/Article */
 
-	form {
-		.field {
-			float: none !important;
-			width: 100% !important;
-			padding-left: 0 !important;
+	section,
+	article {
+		> .last-child,
+		&.last-child {
+			margin-bottom: 0;
 		}
 	}
 
-/* Button */
+/* Banner */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		border: solid 2px _palette(fg) !important;
+	#banner {
+		background-image: url('../../images/banner.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
 
-		&:hover {
-			border-color: _palette(accent1) !important;
-		}
-
-		&.special {
-			border: none !important;
+		.inner {
+			background: _palette(banner, inner-bg);
 		}
 	}
 
-/* Tiles */
+/* CTA  */
 
-	.tiles {
-		article {
-			> .image {
-				&:before, &:after {
-					display: none;
-				}
-			}
-		}
-	}
-
-/* Header */
-
-	#header {
-		.logo {
-			.symbol {
-				display: none;
-			}
-		}
-
-		nav {
-			ul {
-				li {
-					a[href="#menu"] {
-						text-indent: 0;
-						width: auto;
-						font-size: 0.8em;
-
-						&:before, &:after {
-							display: none;
-						}
-					}
-				}
-			}
-		}
-	}
-
-/* Footer */
-
-	#footer {
-		> .inner {
-			section {
-				width: 50%;
-				margin-left: 3em;
-
-				&:first-child {
-					margin-left: 0;
-					width: 40%;
-				}
-			}
-		}
+	#cta {
+		background-image: url('../../images/banner.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
 	}
