--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,49 +4,15 @@
 @import 'libs/skel';
 
 /*
-	Phantom by HTML5 UP
+	Twenty by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Tiles */
+/* Banner */
 
-	.tiles {
-		&:after {
-			content: '';
-			display: block;
-			clear: both;
-		}
-
-		article {
-			float: left;
-
-			> a {
-				padding-top: 50%;
-				margin-top: -1.75em;
-			}
-
-			body:not(.is-touch) & {
-				&:hover {
-					> .image {
-						@include vendor('transform', 'none');
-					}
-				}
-			}
-		}
-	}
-
-/* Footer */
-
-	#footer {
-		> .inner {
-			section {
-				float: left;
-			}
-
-			.copyright {
-				clear: both;
-				padding-top: (_size(element-margin) * 2);
-			}
+	#banner {
+		.inner {
+			opacity: 1.0;
 		}
 	}
