--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,56 +1,100 @@
-///
-/// Phantom by HTML5 UP
-/// html5up.net | @n33co
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
 // Misc.
 	$misc: (
-		z-index-base:		10000
+		z-index-base:	10000
 	);
 
 // Duration.
 	$duration: (
-		menu:				0.45s,
-		transition:			0.2s
+		navPanel: 0.5s
 	);
 
 // Size.
 	$size: (
-		border-radius:		4px,
-		border-width:		1px,
-		element-height:		3em,
-		element-margin:		2em,
-		gutter:				2.5em,
-		field-gutter:		2em,
-		inner:				68em,
-		menu:				22em
+		navPanel: 275px
 	);
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
-		family-fixed:		('Courier New', monospace),
-		weight:				300,
-		weight-bold:		900,
-		weight-bold-alt:	700,
-		letter-spacing:		0.35em,
-		letter-spacing-alt:	-0.035em
 	);
 
 // Palette.
 	$palette: (
-		bg:					#ffffff,
-		bg-accent:			#333333,
-		bg-alt:				#f6f6f6,
-		fg:					#585858,
-		fg-accent:			#ffffff,
-		border:				#c9c9c9,
-		border-bg:			rgba(144,144,144,0.075),
-		accent1:			#f2849e,
-		accent2:			#7ecaf6,
-		accent3:			#7bd0c1,
-		accent4:			#c75b9b,
-		accent5:			#ae85ca,
-		accent6:			#8499e7,
+		bg:				#f3f6fa,
+		fg:				#7c8081,
+		border:			transparentize(#7c8081, 0.8),
+
+		header: (
+			bg:			#fff,
+			fg:			inherit,
+			alt-bg:		transparent,
+			alt-fg:		#fff
+		),
+
+		banner: (
+			bg:			#898786,
+			fg:			#fff,
+			inner-bg:	#341b2b,
+			inner-fg:	#fff
+		),
+
+		footer: (
+			bg:			#E8EEF4,
+			fg:			#7c8081
+		),
+
+		one: (
+			bg:			#83d3c9,
+			fg:			#fff
+		),
+
+		two: (
+			bg:			#fff,
+			fg:			inherit
+		),
+
+		three: (
+			bg:			#645862,
+			fg:			#fff
+		),
+
+		navPanel: (
+			bg:			#1c2021,
+			fg:			#fff
+		),
+
+		navButton: (
+			bg:			rgba(163,169,170,0.75),
+			fg:			#fff
+		),
+
+		twitter: (
+			bg:			#70aecd,
+			fg:			#fff
+		),
+
+		instagram: (
+			bg:			#007bb5,
+			fg:			#fff
+		),
+
+		facebook: (
+			bg:			#7490c3,
+			fg:			#fff
+		),
+
+		google-plus: (
+			bg:			#db6b67,
+			fg:			#fff
+		),
+
+		github: (
+			bg:			#dcad8b,
+			fg:			#fff
+		),
+
+		dribbble: (
+			bg:			#da83ae,
+			fg:			#fff
+		)
+
 	);
