--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1464,6 +1464,70 @@ body {
   }
 }
 
+/* Custom */
+.content ul {
+  list-style: disc;
+  padding-left: 2em;
+}
+
+.content ol {
+  list-style: decimal;
+  padding-left: 2em;
+}
+
+.content li {
+  padding: auto;
+}
+
+blockquote p {
+  margin: 0;
+}
+
+code, tt {
+  padding: 1px 3px;
+  font-family: Inconsolata, monospace, sans-serif;
+  font-size: 0.85em;
+  white-space: pre-wrap;
+  border: #E3EDF3 1px solid;
+  background: #F7FAFB;
+  border-radius: 2px;
+  -webkit-font-feature-settings: "liga" 0;
+  -moz-font-feature-settings: "liga" 0;
+  font-feature-settings: "liga" 0;
+}
+
+pre {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 0 1.75em 0;
+  border: #E3EDF3 1px solid;
+  width: 100%;
+  padding: 10px;
+  font-family: Inconsolata, monospace, sans-serif;
+  font-size: 0.9em;
+  white-space: pre;
+  overflow: auto;
+  background: #F7FAFB;
+  border-radius: 3px;
+}
+
+pre code, pre tt {
+  font-size: inherit;
+  white-space: pre-wrap;
+  background: transparent;
+  border: none;
+  padding: 0;
+}
+
+code, kbd, pre, samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+img {
+  width: 100%;
+}
+
 /* Basic */
 body {
   background: #f3f6fa;
@@ -1549,8 +1613,8 @@ sup {
 
 hr {
   border-top: solid 1px rgba(124, 128, 129, 0.2);
-  border: 0;
   margin-bottom: 1.5em;
+  width: 60%;
 }
 
 blockquote {
@@ -1681,6 +1745,7 @@ input[type="email"] {
 .image {
   border: 0;
   position: relative;
+  width: 100%;
 }
 
 .image:before {
@@ -2824,7 +2889,7 @@ body.index #main {
   /* Main */
   #main {
     background-size: 10em;
-    padding: 3.5em 0 2.5em 0;
+    padding: 0 0 2.5em 0;
   }
   body.index #main {
     padding: 2.5em 0 0 0;
