--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -53,6 +53,67 @@
 
 	$pattern-background-size: 25em;
 
+
+/* Custom */
+.content {
+	& ul{
+		list-style: disc;
+		padding-left: 2em;
+	}
+	& ol {
+		list-style: decimal;
+		padding-left: 2em;
+	}
+	& li{
+		padding: auto;
+	}
+}
+
+blockquote p {
+	margin: 0;
+}
+
+code, tt {
+    padding: 1px 3px;
+    font-family: Inconsolata, monospace, sans-serif;
+    font-size: 0.85em;
+    white-space: pre-wrap;
+    border: #E3EDF3 1px solid;
+    background: #F7FAFB;
+    border-radius: 2px;
+    -webkit-font-feature-settings: "liga" 0;
+    -moz-font-feature-settings: "liga" 0;
+    font-feature-settings: "liga" 0;
+}
+
+pre {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0 0 1.75em 0;
+    border: #E3EDF3 1px solid;
+    width: 100%;
+    padding: 10px;
+    font-family: Inconsolata, monospace, sans-serif;
+    font-size: 0.9em;
+    white-space: pre;
+    overflow: auto;
+    background: #F7FAFB;
+    border-radius: 3px;
+}
+
+pre code, pre tt {
+    font-size: inherit;
+    white-space: pre-wrap;
+    background: transparent;
+    border: none;
+    padding: 0;
+}
+
+code, kbd, pre, samp { font-family: monospace, monospace; font-size: 1em; }
+
+img {
+	width: 100%;
+}
 /* Basic */
 
 	body {
@@ -132,8 +193,8 @@
 
 	hr {
 		border-top: solid 1px _palette(border);
-		border: 0;
 		margin-bottom: 1.5em;
+		width: 60%;
 	}
 
 	blockquote {
@@ -264,6 +325,7 @@
 	.image {
 		border: 0;
 		position: relative;
+		width: 100%;
 
 		&:before {
 			background: url('../images/overlay.png');
@@ -1497,7 +1559,7 @@
 
 			#main {
 				background-size: $pattern-background-size;
-				padding: 3.5em 0 2.5em 0;
+				padding: 0 0 2.5em 0;
 			}
 
 			body.index #main {
